# postmaster

./: Cargo.toml  README.md  build.rs  environ.sh  test_stream.sh
.cargo/: config.toml
.github/workflows/: cache.yml  quickstart.yml  rust.yml
core/: Cargo.toml  build.rs
core/benches/: grpc_send_msg.rs
core/benches/ghz/: config.json
core/migrations/2022-11-23-024635_msg/: down.sql  up.sql
core/src/: lib.rs  schema.rs
core/src/db/: mod.rs  ops.rs  pool.rs
core/src/pb/: messenger.rs  mod.rs
core/tests/: converter.rs  thread.rs
grpc-service/: Cargo.toml
grpc-service/src/: example_client.rs  main.rs
grpc-service/tests/: example_client.rs
http-server/: Cargo.toml  Rocket.toml
http-server/src/: extension.rs  main.rs
http-server/tests/: send_msg_http.rs
migrations/2022-11-23-024635_msg/: up.sql
migrations/2022-11-28-071836_thread/: down.sql  up.sql
proto/: msg.proto
scripts/: docker_spin.sh  environ.sh  launch.sh  launch_service.sh  send_msg_http.sh
src/: lib.rs  schema.rs
src/db/: connection.rs  mod.rs
src/db/ops/: create_msg.rs  mod.rs  read_msg.rs
src/pb/: messenger.rs
tests/: client.rs
