[package]
name = "sb-messenger"
version = "0.1.0"
edition = "2021"
authors = ["phasewalk1"]

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "msg-server"
path = "src/bin/server.rs"

[[bin]]
name = "msg-client"
path = "src/bin/client.rs"

[dependencies]
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["macros", "rt"] }
futures = "0.3.25"
tokio-stream = "0.1.11"
diesel = { version = "2.0.2", features = ["postgres", "chrono", "uuid"] }
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }

[build-dependencies]
tonic-build = "*"
