[package]
name = "sb-messenger"
version = "0.1.0"
edition = "2021"
authors = ["phasewalk1"]

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "msg-server"
path = "src/bin/server.rs"

[dependencies]
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["macros", "rt"] }
futures = "0.3.25"
tokio-stream = "0.1.11"
diesel = { version = "2.0.2", features = ["postgres", "chrono", "uuid"] }
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
pretty_env_logger = "0.4.0"
log = "0.4.17"

[build-dependencies]
tonic-build = "*"
