[package]
name = "postmaster"
version = "0.1.0"
edition = "2021"
authors = ["phasewalk1"]

[lib]
name = "postmaster"
path = "src/lib.rs"

[[bench]]
name = "grpc-send-msg"
path = "benches/grpc_send_msg.rs"
harness = false

[dependencies]
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"
tokio-stream = "0.1.11"
diesel = { version = "2.0.2", features = ["postgres", "chrono", "r2d2"] }
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
pretty_env_logger = "0.4.0"
log = "0.4.17"
lazy_static = "1.4.0"
anyhow = "1.0.66"
itertools-num = "0.1.3"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio", "plotters"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_postgres_pool"]

[build-dependencies]
tonic-build = "*"
