[package]
name = "grpc-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "*"
tokio = { version = "*", features = ["macros", "rt"] }
futures = "0.3.25"
tokio-stream = "0.1.1"
chrono = { version = "0.4.23", features = ["serde"] }
pretty_env_logger = "*"
log = "*"

[build-dependencies]
tonic-build = "*"

[dependencies.carrera]
path = "../core"
