[package]
name = "grpc-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc-service"
path = "src/main.rs"

[[test]]
name = "grpc-client"
path = "tests/example_client.rs"

[dependencies]
tonic = "*"
tokio = { version = "*", features = ["macros", "rt"] }
futures = "0.3.25"
pretty_env_logger = "*"
log = "*"
prost = "*"

[build-dependencies]
tonic-build = "*"

[dependencies.postmaster]
path = "../core"
