[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = "0.11.4"

[dependencies.postmaster]
path = "../core"

[dev-dependencies]
tokio = "1.0.2"
serde_json = "1.0.64"
